# crowd-decision-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
crowd_decision/: config.py  main.py  models.py
tests/: test_example.py
